# verstecken

./: README.md  pyproject.toml
tests/: test_bytes.py
verstecken/: __init__.py  bytes.py
