[tool.poetry]
name = "verstecken"
version = "0.1.0"
description = "Hiding things."
authors = ["Ivan Dubrovin <ivan.dubrovin@proton.me>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.1"
black = {extras = ["jupyter"], version = "^22.12.0"}
isort = "^5.11.4"
flake8 = "^6.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
